[gd_scene load_steps=56 format=3 uid="uid://rvy4ai41rle2"]

[ext_resource type="Script" path="res://main/Main.gd" id="1_p1kf2"]
[ext_resource type="Shader" uid="uid://oqgngipnnhw7" path="res://main/visuals/session_visual/396_hz.tres" id="2_0wdta"]
[ext_resource type="Script" path="res://main/visuals/session_visual/FractalNavigation.gd" id="3_i543k"]
[ext_resource type="PackedScene" uid="uid://b1xieystjlnaj" path="res://main/visuals/moon/ProgressMoon.tscn" id="4_m06w4"]
[ext_resource type="Script" path="res://main/SessionHandler.gd" id="5_cxp3o"]
[ext_resource type="Texture2D" uid="uid://bxeasg10rmyam" path="res://main/user_interface/icons/back.png" id="6_fd82m"]
[ext_resource type="Shader" path="res://main/visuals/Ring.gdshader" id="6_y23f2"]
[ext_resource type="Texture2D" uid="uid://b7o71a2qv3b3q" path="res://main/visuals/white_square.png" id="7_hvaii"]
[ext_resource type="Script" path="res://main/visuals/TouchParticles.gd" id="8_2t5au"]
[ext_resource type="Script" path="res://main/user_interface/menu/Menu.gd" id="9_0a51r"]
[ext_resource type="PackedScene" uid="uid://cyt47kwsgktw2" path="res://main/user_interface/menu/settings_menu/SettingsMenu.tscn" id="10_d62rg"]
[ext_resource type="Texture2D" uid="uid://bg50rbh2q3m0i" path="res://main/user_interface/icons/circle_large.png" id="10_dri80"]
[ext_resource type="Script" path="res://main/user_interface/Ambiance.gd" id="10_pgmon"]
[ext_resource type="PackedScene" uid="uid://cm05h8tarkp6" path="res://main/user_interface/menu/title_menu/TitleMenu.tscn" id="11_on7mj"]
[ext_resource type="PackedScene" uid="uid://cgibjwad0y0hn" path="res://main/user_interface/menu/info_menu/InfoMenu.tscn" id="11_or1m0"]
[ext_resource type="Script" path="res://main/visuals/ambiance/DustParticles.gd" id="11_tt83y"]
[ext_resource type="PackedScene" uid="uid://4u48rwjsutx4" path="res://main/user_interface/menu/help_menu/HelpMenu.tscn" id="13_2ul3x"]
[ext_resource type="Script" path="res://main/user_interface/CircleInput.gd" id="15_v2hrj"]
[ext_resource type="Script" path="res://main/user_interface/ResetButton.gd" id="16_ci21d"]
[ext_resource type="Theme" uid="uid://c3nu6i7da3wrw" path="res://main/user_interface/theme/Theme.tres" id="16_ijllg"]
[ext_resource type="Shader" path="res://main/visuals/ambiance/Rays.gdshader" id="17_ic44v"]
[ext_resource type="Script" path="res://main/audio/SingingBowl.gd" id="17_jom3w"]
[ext_resource type="Script" path="res://main/user_interface/EndLabel.gd" id="17_lyd3c"]
[ext_resource type="Script" path="res://main/user_interface/PhotosensitiveWarning.gd" id="20_857ea"]
[ext_resource type="Texture2D" uid="uid://dsbrjcdp2bp8x" path="res://main/user_interface/icons/cysrtal.png" id="21_p7q3d"]
[ext_resource type="Resource" uid="uid://d0a2erywnv5n" path="res://main/audio/presets/396_hz/396_hz_bowl.tres" id="22_l8mmf"]
[ext_resource type="AudioStream" uid="uid://dn3lvd0d33sek" path="res://main/audio/sound_effects/menu1.ogg" id="22_tc6y4"]
[ext_resource type="Resource" uid="uid://jibcvd23sb2j" path="res://main/audio/presets/417_hz/417_hz_bowl.tres" id="23_1a3s5"]
[ext_resource type="AudioStream" uid="uid://crvwfc4x3jvdc" path="res://main/audio/sound_effects/menu2.ogg" id="23_b3f5e"]
[ext_resource type="Resource" uid="uid://ct428xyl1jgu0" path="res://main/audio/presets/528_hz/528_hz_bowl.tres" id="24_edufn"]
[ext_resource type="Resource" uid="uid://pyebb3avgmog" path="res://main/audio/presets/639_hz/639_hz_bowl.tres" id="25_xujyc"]
[ext_resource type="Resource" uid="uid://bdqnmg5c2rqul" path="res://main/audio/presets/741_hz/741_hz_bowl.tres" id="26_km7n0"]
[ext_resource type="Resource" uid="uid://cpcmscuma524t" path="res://main/audio/presets/852_hz/852_hz_bowl.tres" id="27_8u33j"]
[ext_resource type="Resource" uid="uid://bvy75p143q2bu" path="res://main/audio/presets/432_hz/432_hz_bowl.tres" id="28_ck2w0"]
[ext_resource type="Resource" uid="uid://cbboosmrw7jvp" path="res://main/audio/presets/963_hz/963_hz_bowl.tres" id="28_wjkqw"]
[ext_resource type="Resource" uid="uid://df1dlrhhb6elh" path="res://main/audio/presets/2_hz/2_hz_bowl.tres" id="29_aphwp"]
[ext_resource type="Resource" uid="uid://dkqw5m8gtvlct" path="res://main/audio/presets/6_hz/6_hz_bowl.tres" id="30_lgqak"]
[ext_resource type="Resource" uid="uid://ddmccfnuwlvi3" path="res://main/audio/presets/285_hz/285_hz_bowl.tres" id="30_ysxsf"]
[ext_resource type="Resource" uid="uid://s5c6f2t8w5b1" path="res://main/audio/presets/11_hz/11_hz_bowl.tres" id="31_pyhfm"]
[ext_resource type="Resource" uid="uid://ca6sq2a66avry" path="res://main/audio/presets/23_hz/23_hz_bowl.tres" id="32_3mx81"]
[ext_resource type="Resource" uid="uid://d3j4f73bm5k16" path="res://main/audio/presets/40_hz/40_hz_bowl.tres" id="33_32276"]
[ext_resource type="Resource" uid="uid://cjcngl5ruuv0e" path="res://main/audio/presets/174_hz/174_hz_bowl.tres" id="35_xcbmi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yqt4h"]
shader = ExtResource("2_0wdta")
shader_parameter/uv_offset = Vector2(0, 0.135)
shader_parameter/time = 0.275
shader_parameter/aspect_ratio = 0.438
shader_parameter/color_intensity = 0.57
shader_parameter/scale = 0.25
shader_parameter/border = 0.15
shader_parameter/audio1 = 0.345

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ibdfr"]
shader = ExtResource("17_ic44v")
shader_parameter/angle = -0.3
shader_parameter/position = -0.2
shader_parameter/spread = 0.705
shader_parameter/cutoff = -0.00999995
shader_parameter/falloff = 0.875
shader_parameter/edge_fade = 0.336
shader_parameter/speed = 1.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(1, 1, 1, 0.109804)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="Gradient" id="Gradient_tmi85"]
offsets = PackedFloat32Array(0, 0.351981, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.847059, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_1aksp"]
colors = PackedColorArray(0.22053, 0.22053, 0.22053, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mnrul"]
gradient = SubResource("Gradient_1aksp")
width = 256
height = 256
fill_from = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iah7g"]
texture = SubResource("GradientTexture2D_mnrul")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1i8l8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f10i8"]
shader = ExtResource("6_y23f2")
shader_parameter/inner_radius = 0.1
shader_parameter/color_top = Color(1, 1, 1, 1)
shader_parameter/color_bottom = Color(1, 1, 1, 1)
shader_parameter/color_top1 = Color(1, 1, 1, 1)
shader_parameter/color_bottom1 = Color(1, 1, 1, 1)
shader_parameter/half_color = false
shader_parameter/use_gradient = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7hynb"]
shader = ExtResource("6_y23f2")
shader_parameter/inner_radius = 0.46
shader_parameter/color_top = Color(1, 1, 1, 1)
shader_parameter/color_bottom = Color(1, 1, 1, 1)
shader_parameter/color_top1 = Color(1, 1, 1, 1)
shader_parameter/color_bottom1 = Color(1, 1, 1, 1)
shader_parameter/half_color = false
shader_parameter/use_gradient = false

[sub_resource type="Curve" id="Curve_pwmmv"]
_data = [Vector2(0, 0.231706), 0.0, 0.539092, 0, 0, Vector2(0.996411, 1), 2.09565, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_smgsn"]
offsets = PackedFloat32Array(0, 0.180282, 0.386667, 0.583333, 1)
colors = PackedColorArray(1, 0.61, 1, 0, 1, 1, 0.631373, 0.54902, 0.729412, 1, 1, 0.54902, 1, 1, 1, 0.352941, 1, 1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_16q8p"]
shader = ExtResource("6_y23f2")
shader_parameter/inner_radius = 0.495
shader_parameter/color_top = Color(1, 1, 1, 1)
shader_parameter/color_bottom = Color(1, 1, 1, 1)
shader_parameter/color_top1 = Color(1, 1, 1, 1)
shader_parameter/color_bottom1 = Color(1, 1, 1, 1)
shader_parameter/half_color = false
shader_parameter/use_gradient = true

[sub_resource type="Gradient" id="Gradient_efaqp"]
offsets = PackedFloat32Array(0, 0.15, 0.526807)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.592157, 1, 1, 1, 0)

[node name="Main" type="Node"]
script = ExtResource("1_p1kf2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FractalNavigation" type="ColorRect" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_yqt4h")
layout_mode = 2
script = ExtResource("3_i543k")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressMoon" parent="UI" instance=ExtResource("4_m06w4")]
unique_name_in_owner = true

[node name="BG" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.0901961, 0.14902, 1)
script = ExtResource("9_0a51r")
transition_time = 1.0

[node name="Ambiance" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ibdfr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_pgmon")
base_light = Color(1, 1, 1, 0.145098)
transition_time = 1.2

[node name="DustParticles" type="CPUParticles2D" parent="UI/Ambiance"]
self_modulate = Color(1, 1, 1, 0.176471)
position = Vector2(720, 1280)
amount = 86
lifetime = 4.0
speed_scale = 0.2
texture = ExtResource("10_dri80")
emission_shape = 3
emission_rect_extents = Vector2(720, 1280)
gravity = Vector2(0, 250)
initial_velocity_min = 32.0
initial_velocity_max = 256.0
scale_amount_min = 0.11
scale_amount_max = 0.12
color_ramp = SubResource("Gradient_tmi85")
script = ExtResource("11_tt83y")

[node name="BackgroundPanel" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.545098)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_iah7g")
script = ExtResource("9_0a51r")

[node name="HueHint" type="ColorRect" parent="UI/BackgroundPanel"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.368627)
material = SubResource("ShaderMaterial_1i8l8")
layout_mode = 2
mouse_filter = 1

[node name="SettingsMenu" parent="UI/BackgroundPanel" instance=ExtResource("10_d62rg")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="InfoMenu" parent="UI/BackgroundPanel" instance=ExtResource("11_or1m0")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HelpMenu" parent="UI/BackgroundPanel" instance=ExtResource("13_2ul3x")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BackMenu" type="MarginContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("16_ijllg")
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64
script = ExtResource("9_0a51r")

[node name="ResetButton" type="Button" parent="UI/BackMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("6_fd82m")
script = ExtResource("16_ci21d")

[node name="TitleMenu" parent="UI" instance=ExtResource("11_on7mj")]
unique_name_in_owner = true

[node name="CircleContainer" type="MarginContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -576.0
offset_right = 288.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="CircleInput" type="ColorRect" parent="UI/CircleContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_f10i8")
custom_minimum_size = Vector2(1024, 1024)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("15_v2hrj")
minimum_speed = 0.1
maximum_speed = 6.0
inner_radius = 10.0
good_color = Color(1, 1, 1, 0.952941)
bad_color = Color(0.92549, 0.901961, 0.94902, 0.372549)
on_color = Color(1, 1, 1, 1)
off_color = Color(0.32549, 0.337255, 0.45098, 0.819608)
resonance_rate = 0.5
deresonance_rate = 0.3
resonance_threshold_upper = 0.65
resonance_threshold_lower = 0.4

[node name="TouchParticles" type="CPUParticles2D" parent="UI/CircleContainer/CircleInput"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_7hynb")
position = Vector2(-34, -1042)
emitting = false
amount = 96
lifetime = 2.2
speed_scale = 1.2
texture = ExtResource("7_hvaii")
gravity = Vector2(0, -400)
scale_amount_min = 22.0
scale_amount_max = 22.0
scale_amount_curve = SubResource("Curve_pwmmv")
color_ramp = SubResource("Gradient_smgsn")
script = ExtResource("8_2t5au")

[node name="BowlParticles" type="CPUParticles2D" parent="UI/CircleContainer/CircleInput"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.462745)
material = SubResource("ShaderMaterial_16q8p")
position = Vector2(514, 515)
emitting = false
lifetime = 2.2
speed_scale = 0.4
texture = ExtResource("7_hvaii")
gravity = Vector2(0, 0)
scale_amount_min = 240.0
scale_amount_max = 240.0
scale_amount_curve = SubResource("Curve_pwmmv")
color_ramp = SubResource("Gradient_efaqp")

[node name="FreezeIcon" type="TextureRect" parent="UI/CircleContainer/CircleInput"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_p7q3d")

[node name="On" type="AudioStreamPlayer" parent="UI/CircleContainer/CircleInput"]
unique_name_in_owner = true
stream = ExtResource("22_tc6y4")
volume_db = -8.0
pitch_scale = 1.1

[node name="Off" type="AudioStreamPlayer" parent="UI/CircleContainer/CircleInput"]
unique_name_in_owner = true
stream = ExtResource("23_b3f5e")
volume_db = -8.0
pitch_scale = 1.1

[node name="Chime" type="AudioStreamPlayer" parent="UI/CircleContainer/CircleInput"]
unique_name_in_owner = true
stream = ExtResource("22_tc6y4")

[node name="EndLabel" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.5
offset_top = -92.5
offset_right = 312.5
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("16_ijllg")
text = "Session completed. 
Release your finger.





"
horizontal_alignment = 1
script = ExtResource("17_lyd3c")
transition_time = 0.3

[node name="PhotosensitiveWarning" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("16_ijllg")
color = Color(0, 0, 0, 1)
script = ExtResource("20_857ea")

[node name="Label" type="Label" parent="UI/PhotosensitiveWarning"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -11.5
offset_right = 473.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "This app may potentially trigger seizures for people with photosensitive epilepsy. User discretion is advised."
horizontal_alignment = 1
autowrap_mode = 2

[node name="SessionHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_cxp3o")

[node name="SingingBowl" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("17_jom3w")
preset_mappings = Array[Resource("res://main/audio/BowlPreset.gd")]([ExtResource("28_wjkqw"), ExtResource("27_8u33j"), ExtResource("26_km7n0"), ExtResource("25_xujyc"), ExtResource("24_edufn"), ExtResource("28_ck2w0"), ExtResource("23_1a3s5"), ExtResource("22_l8mmf"), ExtResource("30_ysxsf"), ExtResource("35_xcbmi"), ExtResource("33_32276"), ExtResource("32_3mx81"), ExtResource("31_pyhfm"), ExtResource("30_lgqak"), ExtResource("29_aphwp")])
transition = 1.0
resonance_transition = 4.0

[node name="TransitionIn" type="AudioStreamPlayer" parent="SingingBowl"]
unique_name_in_owner = true
volume_db = -64.0

[node name="Sustain" type="AudioStreamPlayer" parent="SingingBowl"]
unique_name_in_owner = true

[node name="TransitionOut" type="AudioStreamPlayer" parent="SingingBowl"]
unique_name_in_owner = true
